Fix wrong scrollbar color

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,7 +16,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-    @apply bg-c-pink;
+    @apply bg-blue;
 }
 
 .aspect-16x9 {
